@@ -1,5 +1,8 @@
 2010-04-04  Donal K. Fellows  <dkf@users.sf.net>
 
+	* generic/tclIOUtil.c: Minor changes to enforce Engineering Manual
+	style rules.
+
 	* doc/FileSystem.3, doc/Load.3: Documentation for TIP#357.
 
 	* macosx/tclMacOSXBundle.c (OpenResourceMap): [Bug 2981528]: Only
